; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/extr_scsp.c_AddSoundPan.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/extr_scsp.c_AddSoundPan.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [32 x i8] c"Left = -MAX dB, Right = -0 dB\0D\0A\00", align 1
@.str.1 = private unnamed_addr constant [32 x i8] c"Left = -0 dB, Right = -MAX dB\0D\0A\00", align 1
@.str.2 = private unnamed_addr constant [32 x i8] c"Left = -%d dB, Right = -%d dB\0D\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i8*, i32)* @AddSoundPan to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @AddSoundPan(i8* %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* %4, align 4
  %6 = icmp eq i32 %5, 15
  br i1 %6, label %7, label %10

7:                                                ; preds = %2
  %8 = load i8*, i8** %3, align 8
  %9 = call i32 (i8*, i8*, ...) @AddString(i8* %8, i8* getelementptr inbounds ([32 x i8], [32 x i8]* @.str, i64 0, i64 0))
  br label %26

10:                                               ; preds = %2
  %11 = load i32, i32* %4, align 4
  %12 = icmp eq i32 %11, 31
  br i1 %12, label %13, label %16

13:                                               ; preds = %10
  %14 = load i8*, i8** %3, align 8
  %15 = call i32 (i8*, i8*, ...) @AddString(i8* %14, i8* getelementptr inbounds ([32 x i8], [32 x i8]* @.str.1, i64 0, i64 0))
  br label %25

16:                                               ; preds = %10
  %17 = load i8*, i8** %3, align 8
  %18 = load i32, i32* %4, align 4
  %19 = and i32 %18, 15
  %20 = mul nsw i32 %19, 3
  %21 = load i32, i32* %4, align 4
  %22 = ashr i32 %21, 4
  %23 = mul nsw i32 %22, 3
  %24 = call i32 (i8*, i8*, ...) @AddString(i8* %17, i8* getelementptr inbounds ([32 x i8], [32 x i8]* @.str.2, i64 0, i64 0), i32 %20, i32 %23)
  br label %25

25:                                               ; preds = %16, %13
  br label %26

26:                                               ; preds = %25, %7
  %27 = load i8*, i8** %3, align 8
  ret i8* %27
}

declare dso_local i32 @AddString(i8*, i8*, ...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
